runs/cleans notebooks and generates images and tex for evaluation section

--- a/nbs/2. Correlation Table and Heatmaps.ipynb
+++ b/nbs/2. Correlation Table and Heatmaps.ipynb
@@ -1,13 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correlation Table and Heatmaps\n",
+    "================================="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The correlation between the feautures considered in this work and the median score and normalised ranked is calculated.\n",
+    "The aim is to understand the effect the feautures have on a strategy's performance.\n",
+    "\n",
+    "The correlation between all feautures is also calculated and a graphical representation is given in the paper's Appendix."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import dask.dataframe as dd\n",
     "import pandas as pd"
    ]
   },
@@ -18,6 +34,8 @@
    "outputs": [],
    "source": [
     "import matplotlib\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "font = {\"size\": 15, \"weight\": \"bold\"}\n",
     "matplotlib.rc(\"font\", **font)"
@@ -50,6 +68,13 @@
    "outputs": [],
    "source": [
     "clustering_on = [\"Normalized_Rank\", \"Median_score\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Heatmaps**"
    ]
   },
   {
@@ -171,8 +196,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Correlation table between feautures median score and normalised rank**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,14 +250,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda3/envs/axlml/lib/python3.6/site-packages/ipykernel_launcher.py:2: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "textfile = open('../paper/correlation_table_four_types.tex', 'w')\n",
     "textfile.write(pd.concat(tables, axis=1).to_latex().replace('\\$', '$').replace('\\_', '_').replace('\\{', '{').replace('\\}', '}'))\n",
     "textfile.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
