--- a/nbs/4. Feature Importance from Random Forest.ipynb
+++ b/nbs/4. Feature Importance from Random Forest.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature importance from Random Forest\n",
+    "====================================="
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
