--- a/paper/regression_table.tex
+++ b/paper/regression_table.tex
@@ -1,30 +1,24 @@
-\begin{tabular}{lggccggcc}
+\begin{tabular}{lggccggccgg}
 \toprule
-& \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} & \multicolumn{2}{c}{Noisy probabilistic ending} \\
+& \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} & \multicolumn{2}{c}{Noisy probabilistic ending} & \multicolumn{2}{g}{Overall}\\
 \midrule
-& \multicolumn{2}{c}{\(R\) adjusted: 0.886} & \multicolumn{2}{c}{\(R\) adjusted: 0.912} & \multicolumn{2}{g}{\(R\) adjusted: 0.900} & \multicolumn{2}{c}{\(R\) adjusted: 0.895} \\
-
-{} &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value\\
+& \multicolumn{2}{g}{\(R\) adjusted: 0.785} & \multicolumn{2}{c}{\(R\) adjusted: 0.895} & \multicolumn{2}{g}{\(R\) adjusted: 0.894} & \multicolumn{2}{c}{\(R\) adjusted: 0.872} & \multicolumn{2}{g}{\(R\) adjusted: 0.802} \\
+{} &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value \\
 \midrule
-$CC$ to $C$ rate       & -0.050 &  0.000 & -0.073 &  0.000 &  0.009 &  0.000 &  0.009 &    0.0 \\
-$CD$ to $C$ rate       &  0.298 &  0.000 & -0.018 &  0.000 &  0.192 &  0.000 &  0.072 &    0.0 \\
-$C_r$                  & -0.701 &  0.000 & -0.959 &  0.000 &  0.348 &  0.000 & -0.383 &    0.0 \\
-$C_r$ / $C_{max}$    &  2.587 &  0.000 &  2.389 &  0.000 &  1.679 &  0.000 &  1.348 &    0.0 \\
-$C_r$ / $C_{mean}$   & -1.488 &  0.000 & -0.492 &  0.000 & -1.380 &  0.000 & -0.070 &    0.0 \\
-$C_r$ / $C_{median}$ & -0.189 &  0.000 &  0.026 &  0.000 &  0.455 &  0.000 & -0.010 &    0.0 \\
-$C_r$ / $C_{min}$    &  0.086 &  0.000 & -0.268 &  0.000 &  0.108 &  0.000 & -0.202 &    0.0 \\
-$C_{max}$            &  1.961 &  0.000 &  1.544 &  0.000 &  1.411 &  0.000 &  0.780 &    0.0 \\
-$C_{mean}$           & -2.538 &  0.000 & -2.369 &  0.000 & -2.578 &  0.000 & -1.192 &    0.0 \\
-$C_{median}$         &  0.511 &  0.000 & -0.079 &  0.000 &  0.470 &  0.000 & -0.212 &    0.0 \\
-$C_{min}$            & -0.079 &  0.000 & -0.366 &  0.000 & -0.133 &  0.000 & -0.218 &    0.0 \\
-$DC$ to $C$ rate       &  0.203 &  0.000 &  0.137 &  0.000 & -0.020 &  0.000 &  0.084 &    0.0 \\
-$DD$ to $C$ rate       &  0.092 &  0.000 &  0.293 &  0.000 &  0.088 &  0.000 &  0.248 &    0.0 \\
-$N$                    & -0.000 &  0.000 & -0.000 &  0.000 & -0.000 &  0.713 & -0.000 &    0.0 \\
-$k$                    &  0.000 &  0.002 &  0.000 &  0.997 &  0.000 &  0.013 &  0.000 &    0.0 \\
-$n$                    &  0.000 &  0.000 & -0.000 &  0.000 &    -   &    -   &    -   &    -   \\
-$p_e$                  &    -   &    -   &    -   &    -   &  0.004 &  0.125 & -0.052 &    0.0 \\
-$p_n$                  &    -   &    -   & -0.059 &  0.000 &    -   &    -   & -0.060 &    0.0 \\
-SSE                    &  0.198 &  0.000 & -0.048 &  0.000 & -0.102 &  0.000 & -0.106 &    0.0 \\
-memory usage           & -0.008 &  0.000 &  0.000 &  0.250 &    -   &    -   &    -   &    -   \\
+$CC$ to $C$ rate   & -0.039 &    0.0 &  0.109 &    0.0 &  0.017 &  0.000 &  0.191 &    0.0 & 0.013 &    0.0 \\
+$CD$ to $C$ rate   &  0.297 &    0.0 & -0.070 &    0.0 &  0.182 &  0.000 & -0.091 &    0.0 & 0.133 &    0.0 \\
+$C_r$ / $C_{max}$  &      - &      - &  0.689 &    0.0 &      - &      - &  0.927 &    0.0 &   - &      -   \\
+$C_r$ / $C_{mean}$ & -0.467 &    0.0 &  0.129 &    0.0 &  0.525 &  0.000 & -0.025 &    0.0 &  0.346 &    0.0\\
+$C_{max}$          &  0.585 &    0.0 &      - &      - & -0.080 &  0.000 &  0.623 &    0.0 &   - &      -   \\
+$C_{mean}$         &  0.175 &    0.0 & -0.085 &    0.0 & -0.022 &  0.001 & -1.337 &    0.0 &   - &      -   \\
+$C_{min}$          & -0.149 &    0.0 & -0.224 &    0.0 & -0.171 &  0.000 &      - &      - &   - &      -   \\
+$C_{min}$ / $C_r$  &  0.072 &    0.0 & -0.174 &    0.0 &  0.125 &  0.000 &      - &      - & -0.026 &    0.0 \\
+$DC$ to $C$ rate   &  0.199 &    0.0 &  0.017 &    0.0 & -0.030 &  0.000 &  0.013 &    0.0 &  0.066 &    0.0 \\
+$k$                &  0.000 &    0.0 &  0.000 &    0.0 &  0.000 &  0.002 & -0.000 &    0.0 &   - &      -   \\
+$n$                &  0.000 &    0.0 &      - &      - &      - &      - &      - &      - &   - &      -   \\
+$p_e$              &      - &      - &      - &      - &  0.000 &  0.892 & -0.133 &    0.0 &   - &      -   \\
+$p_n$              &      - &      - & -0.077 &    0.0 &      - &      - &      - &      - &   - &      -   \\
+SSE                &  0.260 &    0.0 &  0.193 &    0.0 & -0.041 &  0.000 &  0.170 &    0.0 &  0.100 &    0.0 \\
+memory usage       & -0.010 &    0.0 &      - &      - &      - &      - &      - &      - &   - &      -   \\
 \bottomrule
 \end{tabular}
