--- a/paper/main.tex
+++ b/paper/main.tex
@@ -562,19 +562,20 @@ These have been strategies that have been trained, strategies that defected
 and strategies that would adapt their behaviour based on preassigned rules
 to achieve the highest outcome. These results contradict Axelrod's suggestions,
 and more specifically, the suggestions `Do not be clever' and `Do not be envious'.
+The features and properties contributing a strategy's success are further
+explored in Section~\ref{section:evaluation_of_performance}.
 
 \section{Evaluation of performance}\label{section:evaluation_of_performance}
 
-The aim of this section is to explore the features that contribute to a
-strategy's successful performance. The features explored are measures regarding a
-strategy's behaviour, along with measures regarding the tournaments the
-strategies competed in. A summary of the features is given in
-Table~\ref{table:manual_features}.
+The performance of the strategies is evaluated based on the features of
+Table~\ref{table:manual_features}. These feature are measures regarding a
+strategy's behaviour and the tournaments the strategies competed in are
+explored.
 
 \newcolumntype{g}{>{\columncolor{Gray}}c}
-\begin{table}[h]
+\begin{table}[!htbp]
     \begin{center}
-    \resizebox{\textwidth}{!}{
+    \resizebox{.99\textwidth}{!}{
     \begin{tabular}{gcgcgc}
     \toprule
     feature & feature explanation &  source & value type & min value & max value \\
@@ -605,40 +606,39 @@ $k$ & The number of repetitions of a given tournament & trial summary & integer 
     \bottomrule
         \end{tabular}}
     \end{center}
-    \caption{The features which are included in the performance evaluation analysis.}
+    \caption{The features which are included in the performance evaluation
+    analysis. stochastic, makes use of game and makes use of game are APL
+    classifies that determine whether a strategy is stochastic or deterministic,
+    whether it makes use of the number of turns or the game's payoffs. The
+    memory usage is calculated as the number of turns the strategy considers to
+    make an action (which is specified in the APL) divide by the number of
+    turns. The SSE (introduced in~\cite{Knight2019}) shows how close a strategy
+    is to behaving as a ZDs, and subsequently, in an extortionate way. The
+    method identifies the ZDs closest to a given strategy and calculates the
+    algebraic distance between them, defined as SSE. A SSE value of 1 indicates
+    no extortionate behaviour at all whereas a value of 0 indicates that a
+    strategy is behaving a ZDs. The rest of the features considered are the $CC$
+    to $C$, $CD$ to $C$, $DC$ to $C$, and $DD$ to $C$ rates as well as
+    cooperating ratio of a strategy, the minimum (\(C_{min}\)), maximum
+    (\(C_{max}\)), mean (\(C_{mean}\)) and median (\(C_{median}\)) cooperating
+    ratios of each tournament.}
     \label{table:manual_features}
 \end{table}
 
-APL classifies strategies along several dimensions. These determine whether
-a strategy is stochastic or deterministic, whether it makes use of the number of
-turns or the game's payoffs. The memory usage feature is calculated as the
-memory size of strategy (which is specified in the strategies implementation
-in the APL) divide by the number of turns. For example, Winner12 has a memory
-size of 2 and participated in a tournament where $n$ was 101. In the given
-tournament Winner12 has a memory usage of 0.014925. There are strategies with
-an infinite memory size, for example Evolved FSM 16 Noise 05. These strategies
-have a memory usage of 1.
-For tournaments with a probabilistic ending the number of turns was
-not collected, so the memory usage feature is not used for probabilistic ending
-tournaments. The SSE is a feature introduced in~\cite{Knight2019} which shows
-how close a strategy is to behaving as a ZDs, and subsequently, in an
-extortionate way. The method identifies the ZDs closest to a given strategy and
-calculates the algebraic distance between them, defined as SSE. A SSE value of 1
-indicates no extortionate behaviour at all whereas a value of 0 indicates that a
-strategy is behaving a ZDs. The rest of the features considered are the $CC$ to
-$C$, $CD$ to $C$, $DC$ to $C$, and $DD$ to $C$ rates as well as cooperating
-ratio of a strategy. The minimum, maximum, medium and median cooperating ratios
-of each tournament are also included, and finally the number of turns, the
-number of strategies, the number of repetitions and the probabilities of noise
-and the game ending are also included.
+The memory usage of strategies with an infinite memory size, for example Evolved
+FSM 16 Noise 05 is 1. There rest is calculated as explained in Table
+\ref{table:manual_features}. For example,  Winner12 has a memory size of 2 and
+participated in a tournament where $n$ was 101. In the given tournament Winner12
+has a memory usage of 0.014925. Note that for tournaments with a probabilistic
+ending the number of turns was not collected, so the memory usage feature is not
+used for probabilistic ending tournaments.
 
-Table~\ref{table:correlations} shows the correlation coefficients between the
-features of Table~\ref{table:manual_features} the median score and the median
-normalised rank. Note that the correlation for the classifiers is
-not included because they are binary variables and they will be evaluated using a
-different method. The correlation coefficients for all the features in
-Table~\ref{table:manual_features} against themselves have also been calculated and a
-graphical representation can be found in the Appendix~\ref{app:correlations}.
+The correlation coefficients between the features of
+Table~\ref{table:manual_features} the median score and the median normalised
+rank are given by Table~\ref{table:correlations}. The correlation coefficients
+between all features of Table~\ref{table:manual_features} have been calculated
+and a graphical representation can be found in the
+Appendix~\ref{app:correlations}.
 
 \newcolumntype{g}{>{\columncolor{Gray}}c}
 \begin{table}[!htbp]
@@ -665,7 +665,7 @@ almost always defects after a mutual defection.
 
 \begin{figure}[!htbp]
     \centering
-    \includegraphics[width=.65\textwidth]{../images/rates_of_winners_in_standard_tournaments.pdf}
+    \includegraphics[width=.57\textwidth]{../images/rates_of_winners_in_standard_tournaments.pdf}
     \caption{Distributions of $CC$ to $C$ and $DD$ to $C$ for the winners in
     standard tournaments.}\label{fig:rates_of_winners_in_standard_tournaments}
 \end{figure}
@@ -676,9 +676,9 @@ and median score. A strategy would want to cooperate less than both
 the mean and median cooperator in such settings. In probabilistic ending
 tournaments the correlation coefficients have a larger values, indicating a
 stronger effect. Thus a strategy will be punished more by its cooperative
-behaviour in probabilistic ending environments, this was seen in Section~\ref{section:evaluation_of_performance}
+behaviour in probabilistic ending environments, supporting the results of Section~\ref{section:evaluation_of_performance}
 as well. The distributions of the $C_r$ of the winners in
-both tournaments is given by Figure~\ref{fig:c_r_distributions}. It confirms
+both tournaments are given by Figure~\ref{fig:c_r_distributions}. It confirms
 that the winners in noisy tournaments cooperated less than 35\% of the times
 and in probabilistic ending tournaments less than 10\%.
 In noisy probabilistic ending tournaments and in over all the tournaments' results,
@@ -689,22 +689,18 @@ tournaments.
 
 \begin{figure}[!htbp]
     \centering
-    \includegraphics[width=.65\textwidth]{../images/c_r_winners_tournaments.pdf}
+    \includegraphics[width=.57\textwidth]{../images/c_r_winners_tournaments.pdf}
     \caption{$C_r$ distributions of the winners in noisy and in probabilistic
     ending tournaments.}\label{fig:c_r_distributions}
 \end{figure}
 
-A multivariate linear regression is fitted to model the relationship of
-Table's~\ref{table:manual_features} and the normalised rank. Based on the
-correlation matrices. Appendix~\ref{app:correlations} the depended variables are
-correlated. The median cooperating ration \(C_median\) and \(C_r/ C_median\) are highly
-correlated with \(C_mean\) and \(C_r / C_mean\). So these features are dropped from
-the analysis. The \(C_r\) is also correlated and drop. Finally for some environments
-the \(C_max\) and \(C_min\) are correlated and dropped for the models of those types.
-More specifically, the list of features their p values and \(p-\)values of
-each feature as well as their coefficients are given by
-Table~\ref{table:linear_regression}. The coefficient of determination, \(R\)
-squared, for each model is also reported in Table~\ref{table:linear_regression}.
+A multivariate linear regression has been fitted to model the relationship between
+the features and the normalised rank. Based on the graphical representation of
+the correlation matrices given in Appendix~\ref{app:correlations} several of the
+features are highly correlated. Highly correlated features have been removed
+before fitting the linear regression model. The features included are given
+by Table~\ref{table:linear_regression} alongside their corresponding \(p\) values
+in the distinct tournaments and their regression coefficients.
 
 \newcolumntype{g}{>{\columncolor{Gray}}c}
 \begin{table}[h]
@@ -712,136 +708,127 @@ squared, for each model is also reported in Table~\ref{table:linear_regression}.
 \resizebox{.8\textwidth}{!}{
     \input{regression_table.tex}}
     \end{center}
-    \caption{Results of multivariate linear regressions with \(r\) as the depended variable.}
+    \caption{Results of multivariate linear regressions with \(r\) as the depended variable.
+    \(R\) square is reported for each model. An \(R\) square of 1 represents a model
+    that explains all of the variation in the response variable around its mean.}
     \label{table:linear_regression}
 \end{table}
 
-The results of the linear regression verify the results of the previous
-approaches. The only features that do no have a significant effect on the
-models are the number of repetitions and memory usage in noisy tournaments,
-and the number of turns, number of repetitions and thr probability \(p_e\) in
-probabilistic ending tournaments. Over all the models, the features that are the
-most important predictors are $C_r$, $C_r$ / $C_{max}$ and $C_r$ / $C_{mean}$.
+The feature \(C_{r} / C_{\text{mean}}\) has a statistically significant effect
+across all models and a high regression coefficient. It has both a positive and
+negative impact on the normalised rank depending on the environment. For
+standard tournaments, Figure~\ref{fig:discussion_standard} gives the
+distributions of several features for the winners of standard tournaments. The
+\(C_{r} / C_{\text{mean}}\) distribution of the winner is also given in
+Figure~\ref{fig:discussion_standard}. A value of \(C_r / C_{\text{mean}} = 1\)
+implies that the cooperating ratio of the winner was the same as the mean
+cooperating ratio of the tournament, and in standard tournaments, the median is
+1. Therefore, an effective strategy in standard tournaments was the mean
+cooperator of its respective tournament.
 
-The features $C_{r} / C_{median}$ and $C_r / C_{mean}$ have been repeatably
-highlighted as importance features in explaining the variability of the performances.
-Thus, the effect of these two measures is further explored. In
-Figure~\ref{fig:mean_median_std} the distributions of \(C_r / C_{\text{mean}}\)
-and \(C_r / C_{\text{median}}\) are given for the winners in standard tournaments. A value of \(C_r /
-C_{\text{mean}} = 1\) imply that the cooperating ratio of the winner was the
-same as the mean/median cooperating ratio of the tournament. In standard tournaments, the mean
-for both ratios is 1. Therefore, an effective strategy in standard tournaments
-was the mean/median cooperator of its respective tournament. In comparison,
-Figure~\ref{fig:mean_median_noisy} shows the distributions of the features for
-the winners in noisy tournaments where the mean is at 0.67. Thereupon the winners
-cooperated 67\% of the times the mean/median cooperator did. This analysis is
-applied to the rest of the tournaments and the distributions are given by
-Figures \ref{fig:mean_median_probend}, \ref{fig:mean_median_probend_noisy} and
-\ref{fig:mean_median_overall}. In a tournament with noisy and a probabilistic
-ending the winners cooperated 60\%, whereas in settings that the type of the
-tournament can vary between the types considered in this work the winners
-cooperated 67\% of the times the mean or median cooperator did. Finally, in
-probabilistic ending tournament it has already been mentioned that defecting
-strategies prevail and this result is once again confirmed in this section.
+The distributions of SSE and \(CC\) to \(D\) rate for the winners of standard
+tournaments are also given in Figure~\ref{fig:discussion_standard}. The SSE
+distributions for the winners indicate that they strategy's behaved in ZD way in
+several tournaments, however, not constantly. The winners participated in
+matches where they did not try to extortionate their opponents. Futhermore, the
+\(CC\) to \(D\) distribution indicates that if a strategy were to defect against
+the winners they would reciprocate on average with a probability of 0.5.
 
 \begin{figure}[!htbp]
     \centering
-    \begin{subfigure}{0.35\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{../images/compared_to_mean_standard.pdf}
-        \caption{Distributions of \(C_r / C_{\text{mean}}\) for winners of standard tournaments.}
-        % \label{fig:noisy_probend_results}
-    \end{subfigure}
-    \begin{subfigure}{0.35\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{../images/sse_standard.pdf}
-        \caption{Distributions of SSE for winners of standard tournaments.}
-        % \label{fig:overall_results}
-    \end{subfigure}
+        \includegraphics[width=\textwidth]{../images/standard_discussion.pdf}
+        \caption{Distributions of \(C_r / C_{\text{mean}}\), SSE and \(CD\) to \(C\) ratio
+        for the winners of standard tournaments. A
+        value of \(C_r / C_{\text{mean}} = 1\) imply that the cooperating ratio of the
+        winner was the same as the mean cooperating ratio of the tournament. An SSE distribution
+        skewed towards 0 indicates a ZD behaviour by the strategy.}
+        \label{fig:discussion_standard}
 \end{figure}
+
+Similarly for the reset of the different tournaments types, and the entire data
+set the distributions of \(C_r / C_{\text{mean}}\), SSE and \(CD\) to \(C\) ratio
+are given by Figures~\ref{fig:discussion_noisy},~\ref{fig:discussion_probend},
+\ref{fig:discussion_probend_noisy} and~\ref{fig:discussion_entire_data}.
+
+Based on the \(C_r / C_{\text{mean}}\) distributions the successful strategies
+have adapted differently to the mean cooperator depending on the tournament
+type. In noisy tournaments where the median of the distribution is at 0.67, and
+thereupon the winners cooperated 67\% of the times the mean cooperator did. In
+tournaments with noise and a probabilistic ending the winners cooperated 60\%,
+whereas in settings that the type of the tournament can vary between all the
+types the winners cooperated 67\% of the times the mean cooperator did. Lastly,
+in probabilistic ending tournaments it has already been mentioned that defecting
+strategies prevail (Section~\ref{section:top_performances}), and this result is
+once again confirmed here.
 
 \begin{figure}[!htbp]
     \centering
-    \begin{subfigure}{0.35\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{../images/compared_to_mean_noisy.pdf}
-        \caption{Distributions of \(C_r / C_{\text{mean}}\) for winners of noisy tournaments.}
-        % \label{fig:noisy_probend_results}
-    \end{subfigure}
-    \begin{subfigure}{0.35\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{../images/sse_noisy.pdf}
-        \caption{Distributions of SSE for winners of noisy tournaments.}
-        % \label{fig:overall_results}
-    \end{subfigure}
+        \includegraphics[width=\textwidth]{../images/noisy_discussion.pdf}
+        \caption{Distributions of \(C_r / C_{\text{mean}}\), SSE and \(CD\) to \(C\) ratio
+        for the winners of noisy tournaments.}
+        \label{fig:discussion_noisy}
 \end{figure}
+
+The distributions of the SSE across the tournament types suggest that successful
+strategies exhibit ZD behaviour, but not constantly. ZDs are a set of strategies
+that are envious as they try to exploit their opponents. The winners of the
+tournaments considered in this work are envious, but not as much as ZDs.
+
 
 \begin{figure}[!htbp]
     \centering
-    \begin{subfigure}{0.35\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{../images/compared_to_mean_probend.pdf}
-        \caption{Distributions of \(C_r / C_{\text{mean}}\) for winners of probabilistic ending tournaments.}
-        % \label{fig:noisy_probend_results}
-    \end{subfigure}
-    \begin{subfigure}{0.35\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{../images/sse_probend.pdf}
-        \caption{Distributions of SSE for winners of probabilistic ending tournaments.}
-        % \label{fig:overall_results}
-    \end{subfigure}
+        \includegraphics[width=\textwidth]{../images/probend_discussion.pdf}
+        \caption{Distributions of \(C_r / C_{\text{mean}}\), SSE and \(CD\) to \(C\) ratio
+        for the winners of probabilistic ending tournaments.}
+        \label{fig:discussion_probend}
 \end{figure}
+
+The distributions of the \(CD\) to \(C\) rate evaluate the behaviour of a
+successful strategy after it's opponent has defected against it. In standard
+tournaments it was observed that a successful strategy reciprocates with a
+probability of 0.5. This is distinct between the tournament types. In
+tournaments with noise a strategy is less likely to cooperate following a
+defection compared to standard tournaments, and in probabilistic ending
+tournaments a strategy will reciprocate a defection. In a setting that the type
+of the tournament can vary between all the examined types a winning strategy
+would reciprocate on average with a probability of 0.58.
 
 \begin{figure}[!htbp]
     \centering
-    \includegraphics[width=.5\textwidth]{../images/cd_to_c_probend.pdf}
-    % \caption{Distributions of \(C_r / C_{\text{median}}\)
-    % and \(C_r / C_{\text{median}}\) for winners of noisy probabilistic ending tournaments.}\label{fig:mean_median_probend_noisy}
+        \centering
+        \includegraphics[width=\textwidth]{../images/probend_noisy_discussion.pdf}
+        \caption{Distributions of \(C_r / C_{\text{mean}}\), SSE and \(CD\) to \(C\) ratio
+        for the winners of noisy probabilistic ending tournaments.}
+        \label{fig:discussion_probend_noisy}
 \end{figure}
+
+Further statistically significant features with strong effects include \(C_r /
+C_{\text{min}}\), \(C_r / C_{\text{max}}\), \(C_{\text{min}}\) and
+\(C_{\text{max}}\). These add more emphasis on how important it is for a  a
+strategy to adapt to it's environment. Finally, the features number of turns,
+repetitions and the probabilities of noise and the game ending had not
+significant effect based on the multivariate regression models.
 
 \begin{figure}[!htbp]
     \centering
-    \begin{subfigure}{0.35\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{../images/compared_to_mean_probend_noisy.pdf}
-        \caption{Distributions of \(C_r / C_{\text{mean}}\) for winners of noisy probabilistic ending tournaments.}
-        % \label{fig:noisy_probend_results}
-    \end{subfigure}
-    \begin{subfigure}{0.35\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{../images/sse_probend_noisy.pdf}
-        \caption{Distributions of SSE for winners of noisy probabilistic ending tournaments.}
-        % \label{fig:overall_results}
-    \end{subfigure}
+        \includegraphics[width=\textwidth]{../images/entire_data_discussion.pdf}
+        \caption{Distributions of \(C_r / C_{\text{mean}}\), SSE and \(CD\) to \(C\) ratio
+        for the winners over the tournaments of the entire data set.}
+        \label{fig:discussion_entire_data}
 \end{figure}
 
-\begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=.65\textwidth]{../images/rates_of_winners_in_probend_noisy_tournaments.pdf}
-    % \caption{Distributions of \(C_r / C_{\text{median}}\)
-    % and \(C_r / C_{\text{median}}\) for winners of noisy probabilistic ending tournaments.}\label{fig:mean_median_probend_noisy}
-\end{figure}
-
-\begin{figure}[!htbp]
-    \centering
-    \begin{subfigure}{0.35\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{../images/compared_to_mean_overall.pdf}
-        % \caption{Distributions of \(C_r / C_{\text{mean}}\) for winners of noisy probabilistic ending tournaments.}
-        % \label{fig:noisy_probend_results}
-    \end{subfigure}
-    \begin{subfigure}{0.35\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{../images/rate_overall.pdf}
-        % \caption{Distributions of SSE for winners of noisy probabilistic ending tournaments.}
-        % \label{fig:overall_results}
-    \end{subfigure}
-\end{figure}
-
-In this section the effect of several features, regarding a strategy's behaviour
-and the tournament in which it participated on its performance were presented.
-This was done using three methods. Correlation coefficients, a random forest
-analysis and a linear regression. The results of these are summarised in the following section.
+A third method that evaluates the importance of the features in
+Table~\ref{table:manual_features} has been carried out and it can be found in
+the Appendix~\ref{app:clustering}. The results uphold the outcomes of the
+correlation and multivariate regression methods. It also evaluates the effects
+of the classifiers stochastic, make use of game and make use of length which
+have not been evaluated by the methods above because there are binary variables.
+The results imply that they have no significant effect on a strategy's
+performance.
 
 \section{Conclusion}\label{section:conclusion}
 
